--- a/writing_with_data.Rmd
+++ b/writing_with_data.Rmd
@@ -6,11 +6,11 @@ output:
     toc_float: true
 ---
 
-You will typically (if not always) need to summarize your work in writing. This page describes how to do so using R Markdown. 
+You will typically (if not always) need to summarize your work in writing. This page describes how to do so using R Markdown.
 
-This is the second module in the [Building blocks](topic_building_blocks.html) topic; the relevant slack channel is [here](https://p8105fall2019.slack.com/messages/CMPF9U6LA).
+This is the second module in the [Building blocks](topic_building_blocks.html) topic.
 
-```{r, echo = FALSE, message=FALSE}
+```{r, echo = FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
 
 inline <- function(x = "") paste0("`` `r ", x, "` ``")
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(
 
 ### Learning Objectives
 
-We'll going to get up-to-speed on the basic tools in R. As part of that, we'll define and establish some good habits.
+We'll be getting up-to-speed on the basic tools in R. As part of that, we'll define and establish some good habits.
 
 ### Slide Deck
 
