--- a/plotly_and_dashboards.Rmd
+++ b/plotly_and_dashboards.Rmd
@@ -8,9 +8,9 @@ output:
 
 Plotly is a flexible framework for producing interactive graphics; it has a variety of implementations, including one for R. We'll take a look at a few common plot types, and then introduce `flexdashboards` as a way to collect plots (either static or interactive).
 
-This is the second module in the [Interactivity](topic_interactivity.html) topic; the relevant slack channel is [here](https://p8105fall2019.slack.com/messages/CN6DF7F1B).
+This is the second module in the [Interactivity](topic_interactivity.html) topic.
 
-```{r, include = FALSE}
+```{r, include = FALSE,message=FALSE,warning=FALSE}
 library(tidyverse)
 library(viridis)
 
@@ -33,12 +33,37 @@ scale_fill_discrete = scale_fill_viridis_d
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ```
 
+## Overview {.tabset .tabset-pills}
 
-## Some slides
+### Learning Objectives
 
-<script async class="speakerdeck-embed" data-id="674218dc49484b6898ee32eb47ba646d" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+Create interactive graphics using plot.ly and design a data dashboard using `flexdashboard`.
+
+### Slide Deck
+
+<div class="vid_container">
+  <iframe 
+    src="https://speakerdeck.com/player/674218dc49484b6898ee32eb47ba646d" 
+    allowfullscreen 
+    frameborder="0"
+    class="video">
+  </iframe>
+</div>
+
 <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-plotly-and-dashboards" title="Plotly and Dashboards" target="_blank">Plotly and Dashboards</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
 
+***
+
+### Video Lecture
+
+<div class="vid_container">
+  <iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video">
+  </iframe>
+</div>
+
+***
 
 ## Example
 
