--- a/bootstrapping.Rmd
+++ b/bootstrapping.Rmd
@@ -8,9 +8,9 @@ output:
 
 Bootstrapping is a popular resampling-based approach to statistical inference, and is helpful when usual statistical methods are intractable or inappropriate. The idea is to draw repeated samples from your original sample _with replacement_, thereby approximating the repeated sampling framework. Using list columns to store bootstrap samples is natural and provides a "tidy" approach to resampling-based inference.
 
-This is the third module in the [Linear Models](topic_linear_models.html) topic; the relevant slack channel is [here](https://p8105fall2019.slack.com/messages/CN6D894NL).
+This is the third module in the [Linear Models](topic_linear_models.html) topic.
 
-```{r, echo = FALSE}
+```{r, echo = FALSE,message=FALSE,warning=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   fig.width = 6,
@@ -23,12 +23,37 @@ library(tidyverse)
 theme_set(theme_bw() + theme(legend.position = "bottom"))
 ```
 
+## Overview {.tabset .tabset-pills}
 
-## Some slides
+### Learning Objectives
 
-<script async class="speakerdeck-embed" data-id="dd7f4987ef08497696bdc9a66902203a" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+Implement the bootstrap to obtain inference in non-standard cases using tools for iteration.
+
+### Slide Deck
+
+<div class="vid_container">
+  <iframe 
+    src="https://speakerdeck.com/player/dd7f4987ef08497696bdc9a66902203a" 
+    allowfullscreen 
+    frameborder="0"
+    class="video">
+  </iframe>
+</div>
+
 <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-bootstrapping" title="Simulation and Bootstrapping" target="_blank">Bootstrapping</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
 
+***
+
+### Video Lecture
+
+<div class="vid_container">
+  <iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video">
+  </iframe>
+</div>
+
+***
 
 ## Example
 
