--- a/what_is_ds_i.Rmd
+++ b/what_is_ds_i.Rmd
@@ -42,7 +42,7 @@ Define "data science" and understand its vital role in public health research.
 
 <div class="vid_container">
   <iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/85s5caIZ5B4"
     frameborder="0" allowfullscreen class="video">
   </iframe>
 </div>
@@ -67,14 +67,17 @@ The next chunk of code loads and tidies an example dataset, which includes daily
 
 ```{r weather_data_create, cache = TRUE, message=FALSE}
 weather_df = 
-  rnoaa::meteo_pull_monitors(c("USW00094728", "USC00519397", "USS0023B17S"),
-                      var = c("PRCP", "TMIN", "TMAX"), 
-                      date_min = "2017-01-01",
-                      date_max = "2017-12-31") %>%
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USC00519397", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
   mutate(
-    name = recode(id, USW00094728 = "CentralPark_NY", 
-                      USC00519397 = "Waikiki_HA",
-                      USS0023B17S = "Waterhole_WA"),
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USC00519397 = "Waikiki_HA",
+      USS0023B17S = "Waterhole_WA"),
     tmin = tmin / 10,
     tmax = tmax / 10) %>%
   select(name, id, everything())
@@ -111,7 +114,9 @@ nyc_airbnb %>%
   filter(boro %in% c("Manhattan", "Brooklyn", "Queens")) %>% 
   na.omit(stars) %>% 
   sample_n(5000) %>% 
-  mutate(click_label = str_c("<b>$", price, "</b><br>", stars, " stars<br>", number_of_reviews, " reviews")) %>% 
+  mutate(
+    click_label = 
+      str_c("<b>$", price, "</b><br>", stars, " stars<br>", number_of_reviews, " reviews")) %>% 
   leaflet() %>% 
   addProviderTiles(providers$CartoDB.Positron) %>% 
   addCircleMarkers(~lat, ~long, radius = .1, color = ~pal(stars), popup = ~click_label)
