--- a/writing_functions.Rmd
+++ b/writing_functions.Rmd
@@ -11,16 +11,25 @@ If you use the same code twice, you need a function -- this will improve code re
 This is the first module in the [Iteration](topic_iteration.html) topic.
 
 ```{r, include = FALSE,message=FALSE,warning=FALSE}
+library(tidyverse)
+
 knitr::opts_chunk$set(
-  collapse = TRUE,
+	echo = TRUE,
+	warning = FALSE,
   fig.width = 6,
   fig.asp = .6,
   out.width = "90%"
 )
 
-library(tidyverse)
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
 
-theme_set(theme_bw() + theme(legend.position = "bottom"))
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
 ```
 
 ## Overview {.tabset .tabset-pills}
@@ -183,27 +192,25 @@ You should take a few minutes to examine this code -- make a plot of the simulat
 Once you're satisfied, it's time to wrap things up in a function. I'd like to be able to change the sample size and regression parameters, so those will be my *arguments*; the code that simulates data and fits the regression goes in the *body*; and the *return* statement should include the intercept and slope. A function that does all this, using default values for the intercept and slope, is below. 
 
 ```{r}
-sim_regression = function(n, beta0 = 2, beta1 = 3) {
+sim_mean_sd = function(n, mu = 2, sigma = 3) {
   
   sim_data = tibble(
-    x = rnorm(n, mean = 1, sd = 1),
-    y = beta0 + beta1 * x + rnorm(n, 0, 1)
+    x = rnorm(n, mean = mu, sd = sigma),
   )
   
-  ls_fit = lm(y ~ x, data = sim_data)
-  
-  tibble(
-    beta0_hat = coef(ls_fit)[1],
-    beta1_hat = coef(ls_fit)[2]
-  )
+  sim_data %>% 
+    summarize(
+      mu_hat = mean(x),
+      sigma_hat = sd(x)
+    )
 }
 ```
 
-Repeated calls to `sim_regression()` will give a sense of sampling variability in regression coefficients in SLR; take a few minutes to run `sim_regression(30)` a few times, and then to run `sim_regression(300)`, and think about the results. We'll examine this more formally in [iteration](iteration_and_listcols.html) and in [simulation](simulation_and_bootstrapping.html).
+Repeated calls to `sim_mean_sd()` will give a sense of sampling variability in estimating the mean and standard deviation from a sample; take a few minutes to run `sim_mean_sd(30)` a few times, and then to run `sim_mean_sd(300)`, and think about the results. We'll examine this more formally in [iteration](iteration_and_listcols.html) and in [simulation](simulation.html).
 
-This is also a good time to point out how R handles argument matching. We can use _positional_ matching, meaning the first value supplied is taken to be the first argument, the second value is the second argument, and so on. We do this with `tidyverse` functions a lot; the first argument is always a dataframe, and we just supply that dataframe in the first position. We also use positional matching when we call `mean(x)` or `sim_regression(30, 5, -1)`.
+This is also a good time to point out how R handles argument matching. We can use _positional_ matching, meaning the first value supplied is taken to be the first argument, the second value is the second argument, and so on. We do this with `tidyverse` functions a lot; the first argument is always a dataframe, and we just supply that dataframe in the first position. We also use positional matching when we call `mean(x)` or `sim_mean_sd(30, 5, -1)`.
 
-Alternatively, we can use _named_ matching, which uses the argument name in the function call. Named matching can be a bit more stable when you're writing your own functions (in case you decide to change the order of the inputs, for example) but isn't strictly necessary. Named arguments can be supplied in any order: `sim_regression(n = 30, beta0 = 5, beta1 = -1)` is equivalent to `sim_regression(beta1 = -1, n = 30, beta0 = 5)`.
+Alternatively, we can use _named_ matching, which uses the argument name in the function call. Named matching can be a bit more stable when you're writing your own functions (in case you decide to change the order of the inputs, for example) but isn't strictly necessary. Named arguments can be supplied in any order: `sim_mean_sd(n = 30, mu = 5, sd = 1)` is equivalent to `sim_mean_sd(sd = 1, n = 30, mu = 5)`.
 
 
 ### Revisiting past examples
@@ -219,17 +226,24 @@ url = "https://www.amazon.com/product-reviews/B00005JNBQ/ref=cm_cr_arp_d_viewopt
 
 dynamite_html = read_html(url)
 
-review_titles = dynamite_html %>%
-  html_nodes("#cm_cr-review_list .review-title") %>%
+review_titles = 
+  dynamite_html %>%
+  html_nodes(".a-text-bold span") %>%
   html_text()
 
-review_stars = dynamite_html %>%
+review_stars = 
+  dynamite_html %>%
   html_nodes("#cm_cr-review_list .review-rating") %>%
-  html_text()
+  html_text() %>%
+  str_extract("^\\d") %>%
+  as.numeric()
 
-review_text = dynamite_html %>%
-    html_nodes(".review-data:nth-child(4)") %>%
-    html_text()
+review_text = 
+  dynamite_html %>%
+  html_nodes(".review-text-content span") %>%
+  html_text() %>% 
+  str_replace_all("\n", "") %>% 
+  str_trim()
 
 reviews = tibble(
   title = review_titles,
@@ -243,21 +257,26 @@ Let's write a quick function to scrape review information for any URL to an Amaz
 ```{r}
 read_page_reviews <- function(url) {
   
-  h = read_html(url)
+  html = read_html(url)
   
-  review_titles = h %>%
-    html_nodes("#cm_cr-review_list .review-title") %>%
+  review_titles = 
+    html %>%
+    html_nodes(".a-text-bold span") %>%
     html_text()
   
-  review_stars = h %>%
+  review_stars = 
+    html %>%
     html_nodes("#cm_cr-review_list .review-rating") %>%
     html_text() %>%
-    str_extract("\\d") %>%
+    str_extract("^\\d") %>%
     as.numeric()
   
-  review_text = h %>%
-    html_nodes(".review-data:nth-child(4)") %>%
-    html_text()
+  review_text = 
+    html %>%
+    html_nodes(".review-text-content span") %>%
+    html_text() %>% 
+    str_replace_all("\n", "") %>% 
+    str_trim()
   
   tibble(
     title = review_titles,
@@ -346,15 +365,15 @@ One powerful tool is the ability to pass functions as arguments into functions. 
 As a quick example, suppose we wanted to get a sense of how similar or different values in a vector are to each other. There are lots of ways to measure this -- variance, standard deviation, range, inter-quartile range -- and some are more appropriate in some cases than in others. The function below allows you to input a vector and a function, and returns the result of applying the specified function to the vector input.
 
 ```{r}
-x = rnorm(25, 0, 1)
+x_vec = rnorm(25, 0, 1)
 
 my_summary = function(x, summ_func) {
   summ_func(x)
 }
 
-my_summary(x, sd)
-my_summary(x, IQR)
-my_summary(x, var)
+my_summary(x_vec, sd)
+my_summary(x_vec, IQR)
+my_summary(x_vec, var)
 ```
 
 This example is pretty trivial -- you could just apply those functions directly to  `x` and skip the hassle -- but in many cases the idea of passing functions as arguments is really powerful. As a practical example, remember that you can reorder factors according to different summaries in `fct_reorder`!
